--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/learn-co-curriculum/konami-code-lab#readme",
   "devDependencies": {
     "learn-browser": "^0.1.17"
+  },
+  "dependencies": {
+    "konami": "^1.6.2"
   }
 }
